# gpt-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  api.py  docker-compose.yaml  main.py  pyproject.toml  setup.py
gpt_assistant/: llm_agent.py  recording.py  sound.py  wake_word.py
gpt_assistant/chat/: response.py
gpt_assistant/home_assistant/: api.py  langchain_tool.py
gpt_assistant/speech_to_text/: openai.py  stt.py  whisper_local.py
gpt_assistant/text_to_speech/: aws_polly.py  gtts.py  home_assistant_cloud.py  tts.py
picovoice/: hey_atom.ppn
